--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="static/resize/scripts/jquery.imgareaselect.pack.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <script>
 
     </script>
@@ -224,12 +226,17 @@
       });
 
       $("#pseudo").click(function() {
+        window.swal({
+          title: "Processing...",
+          text: "Please wait"
+        });
         $.ajax({
           url: "/rgb",
           type: "post",
           dataType: "json",
           data: {},
           success: function(result) {
+            window.swal.close();
             $("#img").attr('src', result.img);
             $("#slider1-value").html("");
             $("#slider2-value").html("");
@@ -239,12 +246,17 @@
       });
 
       $("#gray").click(function() {
+        window.swal({
+          title: "Processing...",
+          text: "Please wait"
+        });
         $.ajax({
           url: "/gray",
           type: "post",
           dataType: "json",
           data: {},
           success: function(result) {
+            window.swal.close();
             $("#img").attr('src', result.img);
           }
         });
@@ -262,11 +274,16 @@
       });
 
       $("#cc").click(function() {
+        window.swal({
+          title: "Processing...",
+          text: "Please wait"
+        });
         $.ajax({
           url: "/cc",
           type: "post",
           dataType: "json",
           success: function(result) {
+            window.swal.close();
             $("#img").attr('src', result.img);
           }
         });
@@ -368,13 +385,17 @@
           step: 0.1,
           slide: function(event, ui) {
             slider = ui.value;
+            window.swal({
+              title: "Processing...",
+              text: "Please wait"
+            });
             $.ajax({
               url: "/ve",
               type: "post",
               dataType: "json",
               data: {ve: slider},
               success: function(result) {
-                console.log(result);
+                window.swal.close();
                 $("#img").attr('src', result.img + '?' + new Date().getTime());
                 $("#slider1-value").html("VE value = " + result.ve);
               }
@@ -390,12 +411,17 @@
           step: 0.1,
           slide: function(event, ui) {
             slider1 = ui.value;
+            window.swal({
+              title: "Processing...",
+              text: "Please wait"
+            });
             $.ajax({
               url: "/vd",
               type: "post",
               dataType: "json",
               data: {vd: slider1},
               success: function(result) {
+                window.swal.close();
                 $("#img").attr('src', result.img + '?' + new Date().getTime());
                 $("#slider2-value").html("VD value = " + result.vd);
               }
@@ -411,12 +437,17 @@
           step: 0.1,
           slide: function(event, ui) {
             slider2 = ui.value;
+            window.swal({
+              title: "Processing...",
+              text: "Please wait"
+            });
             $.ajax({
               url: "/gamma",
               type: "post",
               dataType: "json",
               data: {gamma: slider2, mode: "1"},
               success: function(result) {
+                window.swal.close();
                 $("#img").attr('src', result.img + '?' + new Date().getTime());
                 $("#slider3-value").html("Gamma value = " + result.gamma);
               }
@@ -429,13 +460,17 @@
         if(slider + 0.1 <= 2.1) {
           $("#slider").slider("value", slider + 0.1);
           slider = slider + 0.1;
-
+          window.swal({
+            title: "Processing...",
+            text: "Please wait"
+          });
           $.ajax({
             url: "/ve",
             type: "post",
             dataType: "json",
             data: {ve: slider},
             success: function(result) {
+              window.swal.close();
               $("#img").attr('src', result.img + '?' + new Date().getTime());
               $("#slider1-value").html("VE value = " + result.ve);
             }
@@ -447,13 +482,17 @@
         if(slider - 0.1 >= -0.1) {
           $("#slider").slider("value", slider - 0.1);
           slider = slider - 0.1;
-
+          window.swal({
+            title: "Processing...",
+            text: "Please wait"
+          });
           $.ajax({
             url: "/ve",
             type: "post",
             dataType: "json",
             data: {ve: slider},
             success: function(result) {
+              window.swal.close();
               $("#img").attr('src', result.img + '?' + new Date().getTime());
               $("#slider1-value").html("VE value = " + result.ve);
             }
@@ -465,13 +504,17 @@
         if(slider1 + 0.1 <= 2.1) {
           $("#slider1").slider("value", slider1 + 0.1);
           slider1 = slider1 + 0.1;
-
+          window.swal({
+            title: "Processing...",
+            text: "Please wait"
+          });
           $.ajax({
             url: "/vd",
             type: "post",
             dataType: "json",
             data: {vd: slider1},
             success: function(result) {
+              window.swal.close();
               $("#img").attr('src', result.img + '?' + new Date().getTime());
               $("#slider2-value").html("VD value = " + result.vd);
             }
@@ -483,13 +526,17 @@
         if(slider1 - 0.1 >= -0.1) {
           $("#slider1").slider("value", slider1 - 0.1);
           slider1 = slider1 - 0.1;
-
+          window.swal({
+            title: "Processing...",
+            text: "Please wait"
+          });
           $.ajax({
             url: "/vd",
             type: "post",
             dataType: "json",
             data: {vd: slider1},
             success: function(result) {
+              window.swal.close();
               $("#img").attr('src', result.img + '?' + new Date().getTime());
               $("#slider2-value").html("VD value = " + result.vd);
             }
@@ -501,13 +548,17 @@
         if(slider2 + 0.1 <= 2.1) {
           $("#slider2").slider("value", slider2 + 0.1);
           slider2 = slider2 + 0.1;
-
+          window.swal({
+            title: "Processing...",
+            text: "Please wait"
+          });
           $.ajax({
             url: "/gamma",
             type: "post",
             dataType: "json",
             data: {gamma: slider2, mode: "1"},
             success: function(result) {
+              window.swal.close();
               $("#img").attr('src', result.img + '?' + new Date().getTime());
               $("#slider3-value").html("Gamma value = " + result.gamma);
             }
@@ -519,13 +570,17 @@
         if(slider2 - 0.1 >= -0.1) {
           $("#slider2").slider("value", slider2 - 0.1);
           slider2 = slider2 - 0.1;
-
+          window.swal({
+            title: "Processing...",
+            text: "Please wait"
+          });
           $.ajax({
             url: "/gamma",
             type: "post",
             dataType: "json",
             data: {gamma: slider2, mode: "1"},
             success: function(result) {
+              window.swal.close();
               $("#img").attr('src', result.img + '?' + new Date().getTime());
               $("#slider3-value").html("Gamma value = " + result.gamma);
             }
