--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
             <p>
               <span id="slider2-value"></span><br>
               <button type="button" id="vdminus" class='icon-button'><img class='icon-image' src="static/ecil_icons/VD_minus.png"></button>
-              <div id="slider1" classimage area select jquery='slide'></div>
+              <div id="slider1" class='slide'></div>
               <button type="button" id="vdplus" class='icon-button' style='margin-top: -120px; margin-left: 220px;'><img class='icon-image' src="static/ecil_icons/VD_plus.png"></button>
             </p>
             <p style="text-align: center;">
@@ -376,7 +376,7 @@
             $("#img").attr('src', result.img);
           }
         });
-      });
+      });slider2
 
       $("#cc").click(function() {
         window.swal({
