Update: No net required to run webapp

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Web App</title>
 
     <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    src="static/js/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script type="text/javascript" src="static/resize/scripts/jquery.min.js"></script>
     <script type="text/javascript" src="static/resize/scripts/jquery.imgareaselect.pack.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="static/js/jquery-ui.js"></script>
 
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="static/js/sweetalert.min.js"></script>
 
     <style type="text/css">
 
