Make image larger

--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
       </form>
     {% else %}
       <div class="after-content">
-        <img src="{{img}}" id="img" style="width: 640px; height; 512px; float: left;">
+        <img src="{{img}}" id="img" style="width: 60%; height; 100%; float: left;">
         <form method="post" style="float: left; margin-left: 10%;">
           <!-- <p><button id="rgbtohsi" type="button">RGB to HSI</button></p> -->
           <!-- <p><button>Overlapping</button></p> -->
