Basic setup for new frontend, four modes

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
   </head>
   <body>
 
-	</div>
+	<!-- </div> -->
     {% if upload %}
       <form method="post" enctype="multipart/form-data">
         <input type="file" name="inputFile">
@@ -143,7 +143,7 @@
           <p><button type="button" id="rgb">RGB</button></p>
           <p><button type="button" id="gray">Grayscale</button></p> -->
           <div>
-            <p style="text-align: center;">
+            <p>
               <button type="button" id="inv" class='icon-button'><img class='icon-image' src="static/ecil_icons/INV.png"></button>
               <button type="button" id="obj" class='icon-button'><img class='icon-image' src="static/ecil_icons/obj_vs_bg.png"></button>
               <button type="button" id="cc" class='icon-button'><img class='icon-image' src="static/ecil_icons/CC.png"></button>
